# Multi_inst

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  multi_fc_diag.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: README.md  pyproject.toml  requirements.txt
agent/multi_inst_agent/: __init__.py
agent/multi_inst_agent/api/: app.py  models.py
agent/multi_inst_agent/cli/: main.py
agent/multi_inst_agent/core/: analysis.py  meters.py  msp.py  parsers.py  recorder.py  runtime.py  scheduler.py  utils.py
agent/multi_inst_agent/io/: json_writer.py  ports.py
agent/scripts/: install_ol.sh
agent/scripts/udev/: 99-fc.rules
agent/tests/: test_analysis.py  test_api.py  test_parsers.py  test_ports.py
agent/tests/payloads/: altitude.hex  analog.hex  attitude.hex  battery.hex  current_ok.hex  status.hex  voltage_invalid.hex  voltage_ok.hex
multi_inst/: __init__.py  config.yaml
multi_inst/cli/: __main__.py  diag.py
multi_inst/core/: commands.py  config.py  diagnostics.py  msp.py  parsers.py
multi_inst/gui/: __init__.py  app.py  data_models.py  data_sources.py  device_manager.py  main_window.py
multi_inst/gui/views/: __init__.py  dashboard.py  device_details.py
multi_inst/io/: serial_manager.py
tests/: test_msp.py  test_parsers.py
webui/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
webui/src/: app.css  main.tsx
webui/src/components/: Dashboard.tsx  DeviceCard.tsx  DevicePage.tsx
webui/src/components/Charts/: Histogram.tsx  Sparkline.tsx  TimeSeries.tsx
webui/src/lib/: api.ts
webui/src/pages/: Home.tsx
webui/src/store/: useAppStore.ts
webui/tests/: smoke.spec.ts
